--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://openchat.so/chat.js"></script>
+    <script>
+      var chatConfig = {
+        token: 'INF5HGXyhw5Fy5pNwGtn',
+      }
+      initializeChatWidget(chatConfig)
+    </script>
   </body>
 </html>
